--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Maxime Jumelle, IT Consulting">
-  <meta name="keywords" content="maxime, jumelle, IT, IoT, consulting, data, big, statistic, machine, learning, C, math, mathematics, scientific, calculus, junior">
+	<meta name="description" content="Benjamin DALLARD, IT Consulting">
+  <meta name="keywords" content="benjamin, dallard, IA, artificial, intelligence, artificial intelligence, IT, ICO, AIPCloud, AIPC, project management, AJIR, IoT, consulting, data, big, statistic, machine, learning, C, math, mathematics, scientific, calculus, junior">
 	<meta name="author" content="http://trendytheme.net/">
 
 	<title>Benjamin DALLARD - IT Consulting</title>
