--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 
             <div class="download-button">
               <a class="btn btn-info btn-lg" href="#contact"><i class="fa fa-paper-plane"></i>Send me a message</a>
-            <!--    
-              <a class="btn btn-primary btn-lg" href="files/MaximeJUMELLECV_EN.pdf" target="_blank"><i class="fa fa-download"></i>Download my Resume</a>
+            <!--    Download CV section 
+              <a class="btn btn-primary btn-lg" href="..." target="_blank"><i class="fa fa-download"></i>Download my Resume</a>
             --> 
             </div>
           </div>
